--- a/core/igb/src/main/resources/help/com.lorainelab.igb.AboutIGB.html
+++ b/core/igb/src/main/resources/help/com.lorainelab.igb.AboutIGB.html
@@ -4,7 +4,7 @@
     <body bgcolor="FFFFFF">
         <h1><center>About Integrated Genome Browser</center></h1>
         <!--
-            igbVersion, cacheInfo and dataDir are placeholders for respective information.
+            igbVersion, cacheInfo and dataDir comments are placeholders for respective information.
         -->
         <p>
             IGB (pronounced ig-bee) is a fast, flexible, desktop genome browse <br>
