--- a/core/igb/src/main/resources/help/com.lorainelab.igb.AboutIGB.html
+++ b/core/igb/src/main/resources/help/com.lorainelab.igb.AboutIGB.html
@@ -15,8 +15,8 @@
         <p>
             If you use IGB in your research, please cite <br>
             Nicol JW, Helt GA, Blanchard SG Jr, Raja A, Loraine AE. <br>
-            <a href="http://www.ncbi.nlm.nih.gov/pubmed/19654113">The Integrated Genome <!-- igbVersion --> <br>
-                Browser: free software for distribution and exploration of <br>
+            <a href="http://www.ncbi.nlm.nih.gov/pubmed/19654113">The Integrated Genome <!-- igbVersion -->
+                Browser: free software for distribution and exploration of
                 genome-scale datasets.</a> Bioinformatics. 2009 25(20):2730-1.
         </p>
 
