Changed version location

--- a/core/igb/src/main/resources/help/com.lorainelab.igb.AboutIGB.html
+++ b/core/igb/src/main/resources/help/com.lorainelab.igb.AboutIGB.html
@@ -2,7 +2,7 @@
     <head>
     </head>
     <body bgcolor="FFFFFF">
-        <h1><center>About Integrated Genome Browser</center></h1>
+        <h1><center>About Integrated Genome Browser - <!-- igbVersion --></center></h1>
         <!--
             igbVersion, cacheInfo and dataDir comments are placeholders for respective information.
         -->
@@ -16,7 +16,7 @@
             If you use IGB in your research, please cite <br>
             Nicol JW, Helt GA, Blanchard SG Jr, Raja A, Loraine AE. <br>
             <a href="http://www.ncbi.nlm.nih.gov/pubmed/19654113">The Integrated Genome 
-                Browser <!-- igbVersion -->: free software for distribution and exploration of
+                Browser: free software for distribution and exploration of
                 genome-scale datasets.</a> Bioinformatics. 2009 25(20):2730-1.
         </p>
 
