Fixed typo and line breaks

--- a/core/igb/src/main/resources/help/com.lorainelab.igb.AboutIGB.html
+++ b/core/igb/src/main/resources/help/com.lorainelab.igb.AboutIGB.html
@@ -7,14 +7,13 @@
             igbVersion, cacheInfo and dataDir comments are placeholders for respective information.
         -->
         <p>
-            IGB (pronounced ig-bee) is a fast, flexible, desktop genome browse <br>
-            first developed at <a href=\"http://www.affymetrix.com\">Affymetrix</a> for tiling arrays. <br>
-            IGB is now open source software supported by grants and donations. <br>
+            IGB (pronounced ig-bee) is a fast, flexible, desktop genome browser first developed at <a href=\"http://www.affymetrix.com\">Affymetrix</a> for tiling arrays.
+            IGB is now open source software supported by grants and donations.
             To find out more, visit <a href=\"http://www.bioviz.org/igb\">BioViz.org</a>.
         </p>
         <p>
-            If you use IGB in your research, please cite <br>
-            Nicol JW, Helt GA, Blanchard SG Jr, Raja A, Loraine AE. <br>
+            If you use IGB in your research, please cite
+            Nicol JW, Helt GA, Blanchard SG Jr, Raja A, Loraine AE.
             <a href="http://www.ncbi.nlm.nih.gov/pubmed/19654113">The Integrated Genome 
                 Browser: free software for distribution and exploration of
                 genome-scale datasets.</a> Bioinformatics. 2009 25(20):2730-1.
