Small bug with URL

--- a/core/igb/src/main/resources/help/com.lorainelab.igb.AboutIGB.html
+++ b/core/igb/src/main/resources/help/com.lorainelab.igb.AboutIGB.html
@@ -7,9 +7,9 @@
             igbVersion, cacheInfo and dataDir comments are placeholders for respective information.
         -->
         <p>
-            IGB (pronounced ig-bee) is a fast, flexible, desktop genome browser first developed at <a href=\"http://www.affymetrix.com\">Affymetrix</a> for tiling arrays.
+            IGB (pronounced ig-bee) is a fast, flexible, desktop genome browser first developed at <a href="http://www.affymetrix.com">Affymetrix</a> for tiling arrays.
             IGB is now open source software supported by grants and donations.
-            To find out more, visit <a href=\"http://www.bioviz.org/igb\">BioViz.org</a>.
+            To find out more, visit <a href="http://www.bioviz.org/igb">BioViz.org</a>.
         </p>
         <p>
             If you use IGB in your research, please cite
