--- a/core/igb/src/main/resources/about/AboutIGB.html
+++ b/core/igb/src/main/resources/about/AboutIGB.html
@@ -8,9 +8,11 @@
 
     <body>
         <div id="content" class="container">
-            <h2 class="title text-center">
-                Integrated Genome Browser
-            </h2>
+            <div class="hero-unit text-center">
+                <h1>
+                    Integrated Genome Browser
+                </h1>
+            </div>
             <div class="row">
                 <div class="col-xs-3 col-lg-3 " align="center"> 
                     <img alt="User Pic" src="igb.png" class="img-responsive"> 
@@ -53,106 +55,7 @@
                         Loraine AE. <a href="http://www.ncbi.nlm.nih.gov/pubmed/19654113">The Integrated Genome Browser: free software 
                             for distribution and exploration of genome-scale datasets. Bioinformatics.</a> 2009 25(20):2730-1.
                     </p>
-                    <section class="" id="about-sponsors">
-                        <h4 class="text-center">
-                            Supporters
-                        </h4>
-                        <div class="row team-row">
-                            <div class="col-xs-3">
-                                <img width="64" height="64" alt="Photo NIH"
-                                     class="img-sponser" src="about-nih.png">
-                                <h4>
-                                    NIH
-                                </h4>
-                            </div>
-                            <div class="col-xs-3">
-                                <img width="64" height="64" alt="Photo EJ Technologies "
-                                     class="img-sponser" src="ej-tech.png">
-                                <h4>
-                                    EJ Technologies
-                                </h4>
-                            </div>
-                            <div class="col-xs-3">
-                                <img width="64" height="64" alt="Photo Atlassian "
-                                     class="img-sponser" src="about-atlassian.jpg">
-                                <h4>
-                                    Atlassian
-                                </h4>
-                            </div>
-                            <div class="col-xs-3">
-                                <img width="64" height="64" alt="Photo UNCC "
-                                     class="img-sponser" src="about-uncc.png">
-                                <h4>
-                                    University of North Carolina at Charlotte
-                                </h4>
-                            </div>
-                        </div>
-                    </section>
                 </div>
-            </div>
-            <div class="page-body">
-                
-                <!--                    <div class="hero-unit text-center">
-                                        <h1>
-                                            Our mission
-                                        </h1>
-                                        <p>
-                                            to provide the most powerful, extensible, and intuitive visual analytics
-                                            platform to the genomics community
-                                        </p>
-                                    </div>-->
-
-
-                <!--                    <section class="page-section" id="about-team">
-                                        <h2 class="text-center">
-                                            Team
-                                        </h2>
-                                        <div class="row team-row">
-                                            <div class="columns-3">
-                                                <img alt="Photo Ann Loraine"
-                                                     class="img-circle" src="about-ann.png">
-                                                <h3>
-                                                    Ann Loraine
-                                                </h3>
-                                                <strong>Principle Investigator</strong>
-                                            </div>
-                                            <div class="columns-3">
-                                                <img alt="Photo David Norris"
-                                                     class="img-circle" src="about-david.png">
-                                                <h3>
-                                                    David Norris
-                                                </h3>
-                                                <strong>SENIOR ENGINEER</strong>
-                                            </div>
-                                            <div class="columns-3">
-                                                <img alt="Photo John Eckstein "
-                                                     class="img-circle" src="about-john.png">
-                                                <h3>
-                                                    John Eckstein
-                                                </h3>
-                                                <strong>SENIOR ENGINEER</strong>
-                                            </div>
-                                            <div class="columns-3">
-                                                <img alt="Photo Tarun "
-                                                     class="img-circle" src="about-tarun.png">
-                                                <h3>
-                                                    Tarun Mall
-                                                </h3>
-                                                <strong>ENGINEER</strong>
-                                            </div>
-                                        </div>
-                                        <div class="row team-row">
-                                            <div class="columns-3">
-                                                <img alt="Photo Mason "
-                                                     class="img-circle" src="about-mason.png">
-                                                <h3>
-                                                    Mason Meyer
-                                                </h3>
-                                                <strong>SUPPORT SPECIALIST</strong>
-                                            </div>
-                                        </div>
-                                    </section>-->
-
             </div>
         </div>
     </body>
