updates to about page

--- a/core/igb/src/main/resources/about/AboutIGB.html
+++ b/core/igb/src/main/resources/about/AboutIGB.html
@@ -8,17 +8,13 @@
 
     <body>
         <div id="content" class="container">
-            <div class="hero-unit text-center">
-                <h1>
-                    Integrated Genome Browser
-                </h1>
+            <div class="text-center">
+                <h2>
+                    About Integrated Genome Browser
+                </h2>
             </div>
-            <div class="row">
-                <div class="col-xs-3 col-lg-3 " align="center"> 
-                    <img alt="User Pic" src="igb.png" class="img-responsive"> 
-                </div>
-
-                <div class=" col-xs-9 col-lg-9 "> 
+            <div class="row vertical-align">
+                <div class="col-xs-12"> 
                     <table class="table">
                         <tbody>
                             <tr>
@@ -31,17 +27,11 @@
                             </tr>
                             <tr>
                                 <td>Data Directory:</td>
-                                <td>~/.igb</td>
+                                <td>${dataDirectory}</td>
                             </tr>
                         </tbody>
                     </table>
-                </div>
-            </div>
-            <div class="row" >
-                <div class="col-xs-3 text-center" >
-                </div>
-                <div class="col-xs-9 " >
-                    <p>
+                     <p>
                         IGB (pronounced ig-bee) is a fast, flexible, desktop genome browser first
                         developed at
                         <a href="http://www.affymetrix.com/">Affymetrix</a>
