updates to about page

--- a/core/igb/src/main/resources/about/AboutIGB.html
+++ b/core/igb/src/main/resources/about/AboutIGB.html
@@ -10,7 +10,7 @@
         <div id="content" class="container">
             <div class="text-center">
                 <h2>
-                    About Integrated Genome Browser
+                    Integrated Genome Browser
                 </h2>
             </div>
             <div class="row vertical-align">
