work on javafx plugin manager ui

--- a/plugins/plugin-manager/src/main/resources/pluginInfoTemplate.html
+++ b/plugins/plugin-manager/src/main/resources/pluginInfoTemplate.html
@@ -112,7 +112,9 @@
              Bridge.handleUpdateClick();
          },
          render: function() {
-         
+           if(!this.state.pluginName){
+               return <div></div>;
+           }
            var nameLine = 'Plugin Name: ' + this.state.pluginName;
            var versionLine = 'Verson: ' + this.state.version;
            var repositoryLine = 'Repository: ' + this.state.repository;
