--- a/plugins/plugin-manager/src/main/resources/pluginInfoTemplate.html
+++ b/plugins/plugin-manager/src/main/resources/pluginInfoTemplate.html
@@ -115,9 +115,11 @@
          _handleInstallClick: function(){
              if(this.state.isInstalled){
                 Bridge.handleUnInstallClick();
+                updatePluginInfo();
              }
              else{
                 Bridge.installPlugin();
+                updatePluginInfo();
              }
          },
          _handleUpdateClick: function(){
@@ -134,14 +136,16 @@
            var containerStyle = {
             marginTop: '15' // 'ms' is the only lowercase vendor prefix
            };
-           
+           var installBtnIcon = 'fa';
            var installBtnClassArg = 'btn pull-right';
            var installBtnText = '';
            if(this.state.isInstalled){
                installBtnClassArg += ' btn-danger';
+               installBtnIcon += ' fa-trash';
                installBtnText= 'Uninstall Plugin';
            }else{
                installBtnClassArg += ' btn-success';
+               installBtnIcon += ' fa-download';
                installBtnText= 'Install Plugin';
            }
            var updateBtnClassArg = 'btn btn-warning pull-right';
@@ -151,12 +155,12 @@
            var descriptionHtml = marked(this.state.description, {sanitize: true});
            return   <div className="container-fluid" style={containerStyle}>
                         <div className="row">
-                            <div className="col-xs-6">
-                                <h1>{nameLine}</h1>
+                            <div className="col-xs-8">
+                                <h2>{nameLine}</h2>
                             </div>
-                            <div className="col-xs-6">
-                                <a className={installBtnClassArg} onClick={this._handleInstallClick}><i className=
-                                "fa fa-download" style={{marginRight:5}}></i>{installBtnText}</a>
+                            <div className="col-xs-4">
+                                <a className={installBtnClassArg} onClick={this._handleInstallClick}><i className={installBtnIcon}
+                                 style={{marginRight:5}}></i>{installBtnText}</a>
                              <a className={updateBtnClassArg} style={{marginRight:5}} onClick={this._handleUpdateClick  }><i className=
                                 "fa fa-arrow-circle-up" style={{marginRight:5}}></i>Update</a>
                             </div>
@@ -171,7 +175,7 @@
                                 {repositoryLine}
                             </div>
                         </div>
-                        <div className="row">
+                        <div className="row" style={{marginTop: '15'}}>
                             <div className="col-md-12" dangerouslySetInnerHTML={{__html:descriptionHtml}}>
                             </div>
                         </div>
