--- a/plugins/plugin-manager/src/main/resources/pluginInfoTemplate.html
+++ b/plugins/plugin-manager/src/main/resources/pluginInfoTemplate.html
@@ -130,7 +130,7 @@
                return <div></div>;
            }
            var nameLine = this.state.pluginName;
-           var versionLine = 'Verson: ' + this.state.version;
+           var versionLine = 'Version: ' + this.state.version;
            var repositoryLine = 'Repository: ' + this.state.repository;
            
            var containerStyle = {
