--- a/plugins/plugin-manager/src/main/resources/pluginInfoTemplate.html
+++ b/plugins/plugin-manager/src/main/resources/pluginInfoTemplate.html
@@ -50,6 +50,7 @@
             var _storeCallback;
             var _name;
             var _version;
+            var _latestVersion;
             var _description;
             var _repository;
             var _pluginIndex;
@@ -60,6 +61,7 @@
             function updatePluginInfo() { 
                 _name = pluginInfo.getPluginName();
                 _version = pluginInfo.getVersion();
+                _latestVersion = pluginInfo.getLatestVersion();
                 _description = pluginInfo.getDescription();
                 _repository = pluginInfo.getRepository();
                 _isInstalled = pluginInfo.isInstalled();
@@ -81,6 +83,9 @@
                 },
                 getVersion:function() {
                     return _version;
+                },
+                getLatestVersion:function() {
+                    return _latestVersion;
                 },
                 getDescription: function() {
                     return _description;
@@ -112,6 +117,7 @@
            this.setState({
                pluginName: PluginStore.getName(),
                version: PluginStore.getVersion(), 
+               latestVersion: PluginStore.getLatestVersion(), 
                repository: PluginStore.getRepository(), 
                description: PluginStore.getDescription(),
                isInstalled:PluginStore.isInstalled(),
@@ -139,6 +145,9 @@
            }
            var nameLine = this.state.pluginName;
            var versionLine = 'Version: ' + this.state.version;
+           if(this.state.latestVersion){
+               versionLine+=' ('+this.state.latestVersion+')';
+           }
            var repositoryLine = 'Repository: ' + this.state.repository;
            
            var containerStyle = {
