--- a/plugins/plugin-manager/src/main/resources/pluginInfoTemplate.html
+++ b/plugins/plugin-manager/src/main/resources/pluginInfoTemplate.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
-            example
+            app manager
         </title>
         <link href="pluginInfoTemplateResources/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="pluginInfoTemplateResources/font-awesome.min.css">
@@ -25,7 +25,6 @@
         
 
         </script>
-        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script type="text/jsx">
             
             console.log = function(message){
