Adding Mason to the list of contributors

--- a/core/igb/src/main/resources/help/org.lorainelab.igb.AboutIGB.html
+++ b/core/igb/src/main/resources/help/org.lorainelab.igb.AboutIGB.html
@@ -24,7 +24,7 @@
         
         <p>
             <b><font size="+2">Contributors, past and present</font></b><br/><br/>
-            Gregg Helt, Ed Erwin, Ann Loraine, John Nicol, Steven Blanchard, Archana Raja, Vikram Bishnoi, Ehsan Tabari, Richard Linchangco, Tarun Santhosh Kanaparthi, Zhong (Nick) Ren, Fuquan Wang, Anuj Puram, Alyssa Gulledge, Hiral Vora, Lance Frohman, Michael Lawrence, Tarun Kumar Mall, Muralidhar Akurati, David Norris, Nowlan Freese, John Eckstein, Daniella (Danny) Freese, Devdatta Kulkarni, Ivory Blakley, Jennifer Daly, Ashwini Kadam, Deepti Joshi
+            Gregg Helt, Ed Erwin, Ann Loraine, John Nicol, Steven Blanchard, Archana Raja, Vikram Bishnoi, Ehsan Tabari, Richard Linchangco, Tarun Santhosh Kanaparthi, Zhong (Nick) Ren, Fuquan Wang, Anuj Puram, Alyssa Gulledge, Hiral Vora, Lance Frohman, Michael Lawrence, Tarun Kumar Mall, Muralidhar Akurati, David Norris, Mason Meyer, Nowlan Freese, John Eckstein, Daniella (Danny) Freese, Devdatta Kulkarni, Ivory Blakley, Jennifer Daly, Ashwini Kadam, Deepti Joshi
         </p>
     </body>
 </html>
