--- a/core/igb/src/main/resources/help/org.lorainelab.igb.AboutIGB.html
+++ b/core/igb/src/main/resources/help/org.lorainelab.igb.AboutIGB.html
@@ -7,9 +7,9 @@
             igbVersion, cacheInfo and dataDir comments are placeholders for respective information.
         -->
         <p>
-            IGB (pronounced ig-bee) is a fast, flexible, desktop genome browser first developed at <a href="http://www.affymetrix.com">Affymetrix</a> for tiling arrays.
+            IGB (pronounced ig-bee) is a fast, flexible, desktop genome browser first developed at Affymetrix for tiling arrays.
             IGB is now open source software supported by grants and donations.
-            To find out more, visit <a href="http://www.bioviz.org/igb">BioViz.org</a>.
+            To find out more, visit <a href="http://bioviz.org/">BioViz.org</a>.
         </p>
         <p>
             If you use IGB in your research, please cite
@@ -24,7 +24,15 @@
         
         <p>
             <b><font size="+2">Contributors, past and present</font></b><br/><br/>
-            Gregg Helt, Ed Erwin, Ann Loraine, John Nicol, Steven Blanchard, Archana Raja, Vikram Bishnoi, Ehsan Tabari, Richard Linchangco, Tarun Santhosh Kanaparthi, Zhong (Nick) Ren, Fuquan Wang, Anuj Puram, Alyssa Gulledge, Hiral Vora, Lance Frohman, Michael Lawrence, Tarun Kumar Mall, Muralidhar Akurati, David Norris, Mason Meyer, Nowlan Freese, John Eckstein, Daniella (Danny) Freese, Devdatta Kulkarni, Ivory Blakley, Jennifer Daly, Ashwini Kadam, Deepti Joshi
+            Gregg Helt, Ed Erwin, Ann Loraine, John Nicol, Steven
+            Blanchard, Archana Raja, Vikram Bishnoi, Ehsan Tabari,
+            Richard Linchangco, Tarun Santhosh Kanaparthi, Zhong
+            (Nick) Ren, Fuquan Wang, Anuj Puram, Alyssa Gulledge,
+            Hiral Vora, Lance Frohman, Michael Lawrence, Tarun Kumar
+            Mall, Muralidhar Akurati, David Norris, Mason Meyer,
+            Nowlan Freese, John Eckstein, Daniella (Danny) Freese,
+            Devdatta Kulkarni, Ivory Blakley, Jennifer Daly, Ashwini
+            Kadam, Deepti Joshi, Sanket Patil
         </p>
     </body>
 </html>
