IGBF-1244: making objects as private to restrict them from garbage collection

--- a/plugins/plugin-manager/src/main/resources/pluginInfoTemplate.html
+++ b/plugins/plugin-manager/src/main/resources/pluginInfoTemplate.html
@@ -190,8 +190,7 @@
                             </div>
                             <div className="col-xs-4">
                                 <a ref="installButton" className={installBtnClassArg} style={{width: 130}} onClick={this._handleInstallClick}><i className={installBtnIcon} style={{marginRight: 5}}></i>{installButtonLabel}</a>
-                             <a className={updateBtnClassArg} style={{clear:"right", marginTop:10, width: 130}} onClick={this._handleUpdateClick  }><i className=
-                                "fa fa-arrow-circle-up" style={{marginRight: 5}}></i>{updateButtonLabel}</a>
+                                <a className={updateBtnClassArg} style={{clear:"right", marginTop:10, width: 130}} onClick={this._handleUpdateClick  }><i className="fa fa-arrow-circle-up" style={{marginRight: 5}}></i>{updateButtonLabel}</a>
                             </div>
                         </div>
                        
